--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,7 @@ project(SparseDNN VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 
-#& TODO: finish compiler vendor on GCC and Clang 
 #not test yet
-
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "7.3")
 	  message(FATAL_ERROR "\n SparseDNN requires g++ at least v7.3")
@@ -22,6 +20,17 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 	  message(FATAL_ERROR "\n SparseDNN requires clang++ at least v6.0")
   endif() 
 endif()
+
+# Args
+option(SDNN_BUILD_TESTS "Enables build of tests" ON)
+option(SDNN_ENABLE_GPU "turn on GPU" OFF)
+
+# installation path
+set(SDNN_UTEST_DIR ${PROJECT_SOURCE_DIR}/unittests)
+set(SDNN_3RD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rd-party)
+
+# include test
+include(CTest)
 
 #compiler setting 
 add_library(error_settings INTERFACE)
@@ -47,6 +56,9 @@ target_compile_options(
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Thread
+find_package(Threads REQUIRED)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 # message
 message(STATUS "CMAKE_HOST_SYSTEM: ${CMAKE_HOST_SYSTEM}")
@@ -63,19 +75,51 @@ message(STATUS "CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
 message(STATUS "CMAKE_PREFIX_PATH: " ${CMAKE_PREFIX_PATH})
 message(STATUS "PROJECT_NAME: " ${PROJECT_NAME})
 
-# TODO: what to include?
+#include directories
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/3rd-party/)
+
+#--------interface------
+add_library(${PROJECT_NAME} INTERFACE)
+
+target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)
+target_include_directories(${PROJECT_NAME} INTERFACE
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include/> 
+)
+#-----------------------
+
+# test
+if(${SDNN_BUILD_TESTS})
+ 
+enable_testing()
+message(STATUS "Building unit tests ...")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SDNN_UTEST_DIR})
+
+add_executable(reader ${SDNN_UTEST_DIR}/reader.cpp)
+target_link_libraries(reader stdc++fs)
+target_include_directories(reader PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
+add_test(tsv_string_to_matrix ${SDNN_UTEST_DIR}/reader -tc=tsv_string_to_matrix)
+
+add_executable(thread_pool ${SDNN_UTEST_DIR}/thread_pool.cpp)
+target_include_directories(thread_pool PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
+target_link_libraries(thread_pool Threads::Threads)
+add_test(ThreadPool_sum ${SDNN_UTEST_DIR}/thread_pool -tc=sum)
+add_test(ThreadPool_create ${SDNN_UTEST_DIR}/thread_pool -tc=create_pool)
+add_test(ThreadPool_enqueue_type ${SDNN_UTEST_DIR}/thread_pool -tc=enque_type)
+add_test(ThreadPool_enqueue_large_size ${SDNN_UTEST_DIR}/thread_pool -tc=enque_large_size)
+
+endif()
 
 # add executables
 message(STATUS "building executables ...")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+
+if(SDNN_ENABLE_GPU)
+  find_package(CUDA QUIET REQUIRED)
+  cuda_add_executable(main_cuda ${PROJECT_SOURCE_DIR}/main/main.cu)
+  target_link_libraries(main_cuda stdc++fs)
+endif()
+
 add_executable(main ${PROJECT_SOURCE_DIR}/main/main.cpp)
-target_link_libraries(main stdc++fs)
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-target_link_libraries(main Threads::Threads)
-
-
-
-
+target_link_libraries(main ${PROJECT_NAME} Threads::Threads stdc++fs)
