--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,6 @@ endif()
 
 # Args
 option(SDNN_BUILD_TESTS "Enables build of tests" ON)
-option(SDNN_ENABLE_GPU "turn on GPU" OFF)
 
 # installation path
 set(SDNN_UTEST_DIR ${PROJECT_SOURCE_DIR}/unittests)
@@ -55,7 +54,7 @@ target_compile_options(
 # CXX target properties
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
+find_package(CUDA QUIET REQUIRED)
 # Thread
 find_package(Threads REQUIRED)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -101,6 +100,15 @@ target_link_libraries(reader stdc++fs)
 target_include_directories(reader PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
 add_test(tsv_string_to_matrix ${SDNN_UTEST_DIR}/reader -tc=tsv_string_to_matrix)
 
+add_executable(matrix_operation ${SDNN_UTEST_DIR}/matrix_operation.cpp)
+target_include_directories(matrix_operation PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
+add_test(CSR_matrix_to_eigen_sparse ${SDNN_UTEST_DIR}/matrix_operation -tc=CSR_matrix_to_eigen_sparse)
+
+cuda_add_executable(task ${SDNN_UTEST_DIR}/task.cu)
+target_include_directories(task PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
+add_test(GPU_check_nnz ${SDNN_UTEST_DIR}/task -tc=check_nnz)
+add_test(GPU_task ${SDNN_UTEST_DIR}/task -tc=task_GPU)
+
 add_executable(thread_pool ${SDNN_UTEST_DIR}/thread_pool.cpp)
 target_include_directories(thread_pool PRIVATE ${SDNN_3RD_PARTY_DIR}/doctest)
 target_link_libraries(thread_pool Threads::Threads)
@@ -115,11 +123,7 @@ endif()
 message(STATUS "building executables ...")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-if(SDNN_ENABLE_GPU)
-  find_package(CUDA QUIET REQUIRED)
-  cuda_add_executable(main_cuda ${PROJECT_SOURCE_DIR}/main/main.cu)
-  target_link_libraries(main_cuda stdc++fs)
-endif()
-
-add_executable(main ${PROJECT_SOURCE_DIR}/main/main.cpp)
-target_link_libraries(main ${PROJECT_NAME} Threads::Threads stdc++fs)
+cuda_add_executable(main_cuda ${PROJECT_SOURCE_DIR}/main/main.cu)
+target_link_libraries(main_cuda stdc++fs)
+#add_executable(main ${PROJECT_SOURCE_DIR}/main/main.cpp)
+#target_link_libraries(main ${PROJECT_NAME} Threads::Threads stdc++fs)
