add baseline multiple GPUs version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,9 @@ include_directories(${PROJECT_SOURCE_DIR}/3rd-party/)
 include_directories(/usr/local/cuda/include/)
 link_directories(/usr/local/cuda/lib64/)
 
+#OpenMP
+find_package(OpenMP REQUIRED)
+
 #--------interface------
 add_library(${PROJECT_NAME} INTERFACE)
 
@@ -144,13 +147,13 @@ target_include_directories(${PROJECT_NAME} INTERFACE
 message(STATUS "building executables ...")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
-set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}" "-arch=sm_75 \ -gencode=arch=compute_75,code=compute_75" )
+set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}" "-lineinfo -arch=sm_75 \ -gencode=arch=compute_75,code=compute_75" )
 
 cuda_add_executable(main_cuda ${PROJECT_SOURCE_DIR}/main/main.cu)
-target_link_libraries(main_cuda stdc++fs cusparse sparse_dnn::default_settings)
+target_link_libraries(main_cuda stdc++fs cusparse OpenMP::OpenMP_CXX sparse_dnn::default_settings)
 
 add_executable(main ${PROJECT_SOURCE_DIR}/main/main.cpp)
 target_link_libraries(main ${PROJECT_NAME} Threads::Threads stdc++fs sparse_dnn::default_settings)
 
-cuda_add_executable(tsv_file_to_binary ${PROJECT_SOURCE_DIR}/main/tsv_file_to_binary.cu)
-target_link_libraries(tsv_file_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
+#cuda_add_executable(tsv_file_to_binary ${PROJECT_SOURCE_DIR}/main/tsv_file_to_binary.cu)
+#target_link_libraries(tsv_file_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
