--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,11 +153,11 @@ set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}" "-lineinfo -arch=sm_75 \ -gencode=arch=
 cuda_add_executable(main_cuda ${PROJECT_SOURCE_DIR}/main/main.cu)
 target_link_libraries(main_cuda stdc++fs cusparse OpenMP::OpenMP_CXX sparse_dnn::default_settings)
 
-cuda_add_executable(diagonal_to_binary ${PROJECT_SOURCE_DIR}/main/diagonal_to_binary.cu)
-target_link_libraries(diagonal_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
+#cuda_add_executable(diagonal_to_binary ${PROJECT_SOURCE_DIR}/main/diagonal_to_binary.cu)
+#target_link_libraries(diagonal_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
 
-#cuda_add_executable(tsv_file_to_binary ${PROJECT_SOURCE_DIR}/main/tsv_file_to_binary.cu)
-#target_link_libraries(tsv_file_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
+cuda_add_executable(tsv_file_to_binary ${PROJECT_SOURCE_DIR}/main/tsv_file_to_binary.cu)
+target_link_libraries(tsv_file_to_binary ${PROJECT_NAME} stdc++fs sparse_dnn::default_settings)
 
 #CPU parallel. Not support yet.
 #add_executable(main ${PROJECT_SOURCE_DIR}/main/main.cpp)
